--- a/index.html
+++ b/index.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	   <title>Lenguales de la Web</title>
-	    <meta charset="UTF-8">
+	 <meta charset="UTF-8">
+	 <link rel="styleesheet" href="css/main.css">
+   <title>LENGUAJE DE LA WEB</title>
    </head>
-   <body>
-   	<h1 style="color:red"
-   	   "font-whit:=500"
-   	   "font-family:=Arial"
-   	   "font-size:20px"
-   	   ><strong>Algunos lenguajes de la web</strong></h1>
-   	 <h2 style="color:black; font-size16px"><strong>HTML+CSS+Javascript</strong></h2>
+  <body>
+   	<h1>Algunos lenguajes de la web</h1>
+   	 <p>HTML+CSS+Javascript</p>
    	 <ul>
    	 	<li><strong>HTML5</strong></li>
           <img src="img/html.png"
           style="border: blue 1px solid"/>
-          <p style="color:yellow; 
-                    font-size:14px">
-                    <strong>HTML</strong>(Hyper Text Markup Language, versión 5) es la quinta revisión importante del lenguaje básico de la <a href>World Wide Web.</a> HTML.
+            <p>HTML (Hyper Text Markup Language, versión 5) es la quinta revisión importante del lenguaje básico de la <a href>World Wide Web.</a> HTML.
           Usa la extensión .html</p>
         <li><strong>CSS 3</strong></li>
         <img src="img/css.png" style="border: blue 1px solid"/>  
-        <p style="color:yellow;
-                  font-size:14px
-                  "><strong>Hoja de estilo en cascada o CSS</strong>(siglas en ingles de cascading style sheets) es un lenguaje usado para definir y crear la presentación de un documento estructurado escritorio en HTML.
+        <p><strong>Hoja de estilo en cascada o CSS</strong>(siglas en ingles de cascading style sheets) es un lenguaje usado para definir y crear la presentación de un documento estructurado escritorio en HTML.
         Usa la extensión css</p>
         <li><strong>JavaScript</strong></li>
-        <img src="C:\Users\TOSHIBA\Desktop\RuthLopez\lenguajesweb\img/js.png" style="border: blue 1px solid"/>
-        <p style="color:yellow;
-                  font-size 14px"><strom>JavaScrip</strom> (abriendo comunmente"JS") es un lenguaje de programación interpretado utilzado principalmente en el lado del cliente (client-side), implementado como parte de un navegador web permitiendo mejorar en la interfaz de usuario y páginas web dinamicas.
-        <p><strong>Usa la extencion .js</strong></p>
+        <img src="img/js.png" style="border: blue 1px solid"/>
+        <p <strom>JavaScrip</strom> (abriendo comunmente"JS") es un lenguaje de programación interpretado utilzado principalmente en el lado del cliente (client-side), implementado como parte de un navegador web permitiendo mejorar en la interfaz de usuario y páginas web dinamicas.
           </ul>
 
    </body>
